# northstar-updater

./: .gitignore  LICENSE  NorthstarUpdater.py  README.md  compile.ps1  pyproject.toml  updater_config.ini
