[tool.poetry]
name = "northstar-updater"
version = "0.1.0"
description = "Wraps around the northstar launcher and updates it from github"
authors = ["laundmo <laurinschmidt2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.1"
semver = "^2.13.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
nuitka = "^0.6.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
