[tool.poetry]
name = "northstar-updater"
version = "0.1.0"
description = "Wraps around the northstar launcher and updates it from github"
authors = ["laundmo <laurinschmidt2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.62.3"
PyGithub = "^1.55"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
nuitka = "^0.6.18"
pydocstyle = "^6.1.1"
bandit = "^1.7.1"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
